--- a/thankyou.html
+++ b/thankyou.html
@@ -1,1 +1,15 @@
-<h1>THANK YOU!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="landing.css">
+    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thank You!</title>
+</head>
+<body>
+    <h1>Thank you for signing up!</h1>
+    <h2>We'll reach out to you soon!</h2>
+    
+</body>
+</html>
